<resources>
    <string name="app_name">EventLottery</string>
    <string name="event">Event</string>
    <string name="lottery">Lottery</string>
    <string name="sign">Sign</string>
    <string name="up">up</string>
    <string name="organizer">Organizer</string>
    <string name="entrant">Entrant</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="would_you_like_to_receive_notifications">Would You Like to Receive Notifications?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no">No</string>
    <string name="sign_up">Sign up</string>
    <string name="yes">Yes</string>
    <string name="information">Information</string>
    <string name="what_is_your_role">What is your role?</string>
    <string name="creating_account">creating_account</string>
    <string name="generate_qr">Generate QR</string>
    <string name="event_title">Event title</string>
    <string name="pre_created_event">Event Name</string>
    <string name="waitlist_2">Waitlist: 2</string>
    <string name="_2_days_left">2 days left</string>
    <string name="go_to_event_page"><![CDATA[Go to Event Page >]]></string>
    <string name="go_to_event_pagess"><![CDATA[Go to Event Page >]]></string>
    <string name="manage">Manage</string>
    <string name="edit">Edit</string>
    <string name="eventlottery">EventLottery</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo09">TODO</string>
    <string name="leave_waitlist">Leave Waitlist</string>
    <string name="waitlisted">Waitlisted</string>
    <string name="won">Won</string>
    <string name="registered">Registered</string>
    <string name="create_event">Create Event</string>
    <string name="pluss">+</string>
    <string name="pending">Pending</string>
    <string name="lost">Lost</string>
    <string name="my_events">My Events</string>
    <string name="event_history">Event History</string>
    <string name="event_1">Event 1</string>
    <string name="_1">1</string>
    <string name="southgate_mall">📍 Southgate Mall</string>
    <string name="scan">Scan</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="event_image">Event Image</string>
    <string name="add_image">Add Image</string>
    <string name="upload_images">Upload Images</string>
    <string name="geolocation_requirement">Geolocation Requirement</string>
    <string name="waitlist_limit_optional">Waitlist Limit (optional)</string>
    <string name="pool_size">Pool Size</string>
    <string name="event_information">Event Information</string>
    <string name="registration_period">Registration Period</string>
    <string name="end_date">End Date</string>
    <string name="browse">Browse</string>
    <string name="event_description_criteria">Event Description</string>
    <string name="start_date">Start Date</string>
    <string name="_2025_12_20">2025-12-20</string>
    <string name="date">2025-12-20</string>
    <string name="additional_information">Additional Information</string>
    <string name="eligibility_criteria">Eligibility Criteria</string>
    <string name="organizer_name">Organizer Name</string>
    <string name="price_optional">Price (Optional)</string>
    <string name="yess">Yes</string>
    <string name="moneysign">$</string>
    <string name="location">Location</string>
    <string name="no1">No</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="Eventlogo">⏰</string>
    <string name="user_name">User name</string>
    <string name="role">Role</string>
    <string name="edit_account">Edit Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="info">Information</string>
    <string name="phone_number1">Phone Number</string>
    <string name="email1">Email</string>
    <string name="change_password_from_security_screen">Change password from Security screen</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="_56">56</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="images">Images</string>
    <string name="profiles">Profiles</string>
    <string name="organizers">Organizers</string>
    <string name="events">Events</string>
    <string name="_14">14</string>
    <string name="notifications">Notifications</string>
    <string name="_28">28</string>
    <string name="search">Search</string>
    <string name="participants_3">Participants: 3</string>
    <string name="event_3">Event 3</string>
    <string name="view_event_details">View Event Details</string>
    <string name="by_organizer_name">By Organizer Name</string>
    <string name="participants_0">Participants: 0</string>
    <string name="view_event_detail">View Event Details</string>
    <string name="event1">Event 1</string>
    <string name="delete_event">Delete Event</string>
    <string name="search_for_an_event">Search for an Event</string>
    <string name="event_123">View Event Details</string>
    <string name="by_organizer_name1">By Organizer Name</string>
    <string name="participants_2">Participants: 2</string>
    <string name="by_organizer_name34">By Organizer Name</string>
    <string name="delete_event123">Delete Event</string>
    <string name="event_256">Event 2</string>
    <string name="delete46">Delete Event</string>
    <string name="find_events">Find Events</string>
    <string name="joined_december_25_2024">Joined: December 25, 2024</string>
    <string name="lorcan_jerillo">Lorcan Jerillo</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_profile123">Delete Profile</string>
    <string name="joined_october_20_2025">Joined: October 20, 2025</string>
    <string name="jordan_kal_gmail_com">jordan.kal@gmail.com</string>
    <string name="view_profile_details">View Profile Details</string>
    <string name="view_profile_details43">View Profile Details</string>
    <string name="view_profile_details654">View Profile Details</string>
    <string name="search_for_a_profile">Search for a Profile</string>
    <string name="find_profiles">Find Profiles</string>
    <string name="janica_smith_gmail_com">janica.smith@gmail.com</string>
    <string name="lorcan_jerillo_gmail_com">lorcan.jerillo@gmail.com</string>
    <string name="jordan_kalogeras">Jordan Kalogeras</string>
    <string name="joined_october_21_2025">Joined: October 21, 2025</string>
    <string name="search78">Search</string>
    <string name="delete_profile78">Delete Profile</string>
    <string name="search12">Search</string>
    <string name="uploaded_by_organizer_name">Uploaded by Organizer Name</string>
    <string name="participants_023">Participants: 0</string>
    <string name="participants_232">Participants: 2</string>
    <string name="find_images32">Find Images</string>
    <string name="event_332">Event 3</string>
    <string name="event_432">Event 4</string>
    <string name="uploaded_by_organizer_name32">Uploaded by Organizer Name</string>
    <string name="uploaded_by_organizer_name3232">Uploaded by Organizer Name</string>
    <string name="participants_33232">Participants: 3</string>
    <string name="event_12332">Event 1</string>
    <string name="delete_image322">Delete Image</string>
    <string name="delete_image324">Delete Image</string>
    <string name="delete_image43324">Delete Image</string>
    <string name="view_image_details432">View Image Details</string>
    <string name="view_image_details432234">View Image Details</string>
    <string name="search_for_a_images423">Search for a Images</string>
    <string name="view_image_details543">View Image Details</string>
    <string name="the_registration_date_has_arrived_for_this_event_and_the_entrants_will_be_drawn_soon_keep_an_eye_our_for_an_update">The Registration date has arrived for this event and the entrants will be drawn soon! Keep an eye our for an update!</string>
    <string name="you_weren_t_drawn_to_participate_in_event_name_however_you_can_opt_in_to_be_put_into_another_waitlist_in_case_a_an_accepted_user_fails_to_accept_their_invite_or_declines_their_invitation">You weren’t drawn to participate in `event name`. However, you can opt in to be put into another waitlist in case a an accepted user fails to accept their invite or declines their invitation</string>
    <string name="by_event_2_organizers">by Event 2 organizers</string>
    <string name="drawing_has_begun">Drawing has begun!</string>
    <string name="by_event_3_organizers">by Event 3 organizers</string>
    <string name="i_m_sorry">I\'m sorry!</string>
    <string name="by_event_1_organizers">by Event 1 organizers</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_ve_been_drawn_and_is_allowed_to_participate_in_the_event_please_accept_your_invite_to_proceed_and_save_your_spot_please_go_to_your_my_events_list_to_accept_your_invite">You’ve been drawn and is allowed to participate in the event! Please Accept your invite to proceed and save your spot. Please go to your “My Events” list to accept your invite</string>
    <string name="admin_dashboard87">Admin Dashboard</string>
    <string name="you_ve_been_drawn_and_is_allowed_to_part7icipate_in_the_event_please_accept_your_invite_to_proceed_and_save_your_spot_please_go_to_your_my_events_list_to_accept_your_invite">You\'ve been drawn and is allowed to participate in the event! Please Accept your invite to proceed and save your spot. Please go to your My Events list to accept your invite</string>
    <string name="the_registration_date_has_arrived_for_this_event_and_the_entrants_will_be_drawn_soon_keep_an_eye_our_for_an_update7">The Registration date has arrived for this event and the entrants will be drawn soon! Keep an eye our for an update!</string>
    <string name="by_event_2_organizers7">by Event 2 organizers</string>
    <string name="you_weren_t_drawn_to_participate_in_event_name_however_you_can_opt_in_to_be_put_into_another_waitlist_in_case_a_an_accepted_user_fails_to_accept_their_invite_or778_declines_their_invitation">You weren\'t drawn to participate in event name. However, you can opt in to be put into another waitlist in case a an accepted user fails to accept their invite or declines their invitation</string>
    <string name="by_event_1_organizers78">by Event 1 organizers</string>
    <string name="drawing_has_begun78">Drawing has begun!</string>
    <string name="_5687">56</string>
    <string name="i_m_sorry98">I\'m sorry!</string>
    <string name="congratulations89">Congratulations!</string>
    <string name="by_event_3_organizers989">by Event 3 organizers</string>
    <string name="notification8">Notifications</string>
    <string name="by_organizer_name23">By Organizer Name</string>
    <string name="view_event_details23">View Event Details</string>
    <string name="participants_03">Participants: 0</string>
    <string name="delete_event23">Delete Event</string>
    <string name="event_name2323">Event Name</string>
    <string name="admin_dashboard32">Admin Dashboard</string>
    <string name="find_events32">Find Events</string>
    <string name="no_events_found3232">No events found</string>
    <string name="search_for_an_event23">Search for an Event</string>
    <string name="_032">0</string>
    <string name="event_name23232">Event Name</string>
    <string name="uploaded_by_organizer_name322">Uploaded by Organizer Name</string>
    <string name="image_uploaded_on_date23">Image uploaded on: Date</string>
    <string name="delete_image233">Delete Image</string>
</resources>