<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/card_bg"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:background="#E0E0E0"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/event_image" />

    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name23232"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/organizerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/uploaded_by_organizer_name322"
        android:textColor="#757575"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/imageInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/image_uploaded_on_date23"
        android:textColor="#757575"
        android:textSize="11sp" />

    <Button
        android:id="@+id/deleteImageBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="#F19A9A"
        android:text="@string/delete_image233"
        android:textAllCaps="false"
        android:textColor="#37474F"
        android:textSize="11sp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>