<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/event"
        android:textColor="#000000"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lottery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lottery"
        android:textColor="#EE90F6"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_event"
        app:layout_constraintTop_toTopOf="@id/tv_event" />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_event" />

    <TextView
        android:id="@+id/tv_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/up"
        android:textColor="#EE90F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_sign"
        app:layout_constraintTop_toTopOf="@id/tv_sign" />

    <TextView
        android:id="@+id/tv_role_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_is_your_role"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign" />

    <Button
        android:id="@+id/btn_organizer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/organizer"
        android:textSize="16sp"
        android:backgroundTint="#E0E0E0"
        android:textColor="#000000"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_role_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_entrant" />

    <Button
        android:id="@+id/btn_entrant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#E0E0E0"
        android:text="@string/entrant"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_organizer"
        app:layout_constraintTop_toTopOf="@id/btn_organizer" />

    <TextView
        android:id="@+id/tv_info_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_organizer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_info_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_notifications_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/would_you_like_to_receive_notifications"
        android:textColor="#000000"
        android:textColorLink="#A9EE90F6"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <RadioGroup
        android:id="@+id/rg_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_notifications_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rb_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#B86969"
            android:checked="true"
            android:text="@string/yes"
            android:textColorLink="#8C4242"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#71D88E"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_notifications"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creating_account"
        android:textSize="14sp"
        android:textColor="#666666"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>