<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/card_bg"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name2323"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/organizerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/by_organizer_name23"
        android:textColor="#757575"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/participantsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/participants_03"
        android:textColor="#757575"
        android:textSize="11sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/viewDetailsBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="#E8E8E8"
            android:text="@string/view_event_details23"
            android:textAllCaps="false"
            android:textColor="#666666"
            android:textSize="11sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/deleteEventBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="#F19A9A"
            android:text="@string/delete_event23"
            android:textAllCaps="false"
            android:textColor="#37474F"
            android:textSize="11sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>